test/errors/type/collections/set/__band3.yasl
echo mt.lookup(collections.set(), .__band)(1, true)
